--- a/servithenEN/htmlEN/ProduitEN.html/VenturiEN.html
+++ b/servithenEN/htmlEN/ProduitEN.html/VenturiEN.html
@@ -33,11 +33,9 @@
 
 
                 <div class="dropdown">
-                    <button class="dropbtn">CONTACT US
-                  </button>
-                    <div class="dropdown-content1">
-                        <a href="/servithenEN/htmlEN/formEN.html">To the contact page</a>
-                    </div>
+
+                    <a class="MenuBtn" href="/servithenEN/htmlEN/formEN.html">CONTACT US</a>
+
                 </div>
 
                 <div class="dropdown">
@@ -88,11 +86,9 @@
                 </div>
 
                 <div class="dropdown">
-                    <button class="dropbtn">HOME 
-                  </button>
-                    <div class="dropdown-content3">
-                        <a href="/servithenEN/htmlEN/accueilEN.html">Home</a>
-                    </div>
+
+                    <a class="MenuBtn" href="/servithenEN/htmlEN/accueilEN.html">HOME</a>
+
                 </div>
 
             </div>
@@ -189,12 +185,12 @@
         <footer class="coordonne">
 
             <div class="foters">
-                <h4>Contact information :</h4>
+                <h4>Coordinated :</h4>
             </div>
 
             <div class="foter">
                 <img class="logoinfo" src="/img/LogoFooter/logoTelW.png">
-                <a href="Tel:+33134897146"> +33 (0) 1 34 89 71 46</a>
+                <a class="footerp" href="Tel:+33134897146"> +33 (0) 1 34 89 71 46</a>
             </div>
             <br>
             <div class="foter">
@@ -204,15 +200,20 @@
             <br>
             <div class="foter">
                 <img class="logoinfo" src="/img/LogoFooter/linkedinW.png">
-                <a target="_blank" class="footerp" class="footerp" href="https://www.linkedin.com/company/servithen/">Société SERVITHEN</a>
+                <a target="_blank" class="footerp" href="https://www.linkedin.com/company/servithen/">Société SERVITHEN</a>
             </div>
             <br>
             <div class="foter">
                 <img class="logoinfo" src="/img/LogoFooter/logoPosW.png">
-                <a target="_blank" href="https://www.google.fr/maps/place/SERVITHEN/@48.8155515,1.9083403,20z/data=!4m13!1m7!3m6!1s0x47e69b2e4c101591:0x3c4b6015d2f3a5ea!2s8+Rue+Guillaume+de+Bois+Nivard,+78640+Neauphle-le-Ch%C3%A2teau!3b1!8m2!3d48.8155576!4d1.9084528!3m4!1s0x47e69b2e4914fd6f:0xefa5b210e1554b90!8m2!3d48.8155084!4d1.9085263">
-                        8 Rue Guillaume de Bois Nivard,<br> 78640 Neauphle-le-Château</a>
+                <a target="_blank" class="footerp" href="https://www.google.fr/maps/place/SERVITHEN/@48.8155515,1.9083403,20z/data=!4m13!1m7!3m6!1s0x47e69b2e4c101591:0x3c4b6015d2f3a5ea!2s8+Rue+Guillaume+de+Bois+Nivard,+78640+Neauphle-le-Ch%C3%A2teau!3b1!8m2!3d48.8155576!4d1.9084528!3m4!1s0x47e69b2e4914fd6f:0xefa5b210e1554b90!8m2!3d48.8155084!4d1.9085263">
+                            8 Rue Guillaume de Bois Nivard,<br> 78640 Neauphle-le-Château</a>
 
             </div>
+
+
+
+
+
 
         </footer>
 </body>
