--- a/servithenFR/htmlFR/presentationFR.html
+++ b/servithenFR/htmlFR/presentationFR.html
@@ -31,11 +31,9 @@
 
 
             <div class="dropdown">
-                <button class="dropbtn">NOUS CONTACTER
-              </button>
-                <div class="dropdown-content1">
-                    <a href="/servithenFR/htmlFR/formFR.html">Vers la page de contact</a>
-                </div>
+
+                <a class="MenuBtn" href="/servithenFR/htmlFR/formFR.html">NOUS CONTACTER</a>
+
             </div>
 
             <div class="dropdown">
@@ -50,13 +48,13 @@
             <div class="dropdown">
                 <button class="dropbtn">SERVICES 
               </button>
-              <div class="dropdown-content3">
-                <a  href="serviceFR/service1.html">Audits et Expertises d’installations</a>
-                <a  href="serviceFR/service2.html">Remise aux normes réglementaire </a>
-                <a  href="serviceFR/service3.html">Valorisation énergétique</a>
-                <a  href="serviceFR/service4.html">Etudes de faisabilité, Avant-projets et études de détail</a>
-                <a  href="serviceFR/service5.html">Maintenance préventive / curative</a>
-            </div>
+                <div class="dropdown-content3">
+                    <a href="serviceFR/service1.html">Audits et Expertises d’installations</a>
+                    <a href="serviceFR/service2.html">Remise aux normes réglementaire </a>
+                    <a href="serviceFR/service3.html">Valorisation énergétique</a>
+                    <a href="serviceFR/service4.html">Etudes de faisabilité, Avant-projets et études de détail</a>
+                    <a href="serviceFR/service5.html">Maintenance préventive / curative</a>
+                </div>
             </div>
 
             <div class="dropdown">
@@ -85,11 +83,9 @@
             </div>
 
             <div class="dropdown">
-                <button class="dropbtn">ACCUEIL 
-              </button>
-                <div class="dropdown-content3">
-                    <a href="/servithenFR/htmlFR/accueilFR.html">Accueil</a>
-                </div>
+
+                <a class="MenuBtn" href="/servithenFR/htmlFR/accueilFR.html">ACCUEIL</a>
+
             </div>
         </div>
 
@@ -186,12 +182,12 @@
         <footer class="coordonne">
 
             <div class="foters">
-                <h4>Coordonné :</h4>
+                <h4>Coordonnées :</h4>
             </div>
 
             <div class="foter">
                 <img class="logoinfo" src="/img/LogoFooter/logoTelW.png">
-                <a href="Tel:+33134897146"> +33 (0) 1 34 89 71 46</a>
+                <a class="footerp" href="Tel:+33134897146"> +33 (0) 1 34 89 71 46</a>
             </div>
             <br>
             <div class="foter">
@@ -201,20 +197,15 @@
             <br>
             <div class="foter">
                 <img class="logoinfo" src="/img/LogoFooter/linkedinW.png">
-                <a target="_blank" class="footerp" class="footerp" href="https://www.linkedin.com/company/servithen/">Société SERVITHEN</a>
+                <a target="_blank" class="footerp" href="https://www.linkedin.com/company/servithen/">Société SERVITHEN</a>
             </div>
             <br>
             <div class="foter">
                 <img class="logoinfo" src="/img/LogoFooter/logoPosW.png">
-                <a target="_blank" href="https://www.google.fr/maps/place/SERVITHEN/@48.8155515,1.9083403,20z/data=!4m13!1m7!3m6!1s0x47e69b2e4c101591:0x3c4b6015d2f3a5ea!2s8+Rue+Guillaume+de+Bois+Nivard,+78640+Neauphle-le-Ch%C3%A2teau!3b1!8m2!3d48.8155576!4d1.9084528!3m4!1s0x47e69b2e4914fd6f:0xefa5b210e1554b90!8m2!3d48.8155084!4d1.9085263">
+                <a target="_blank" class="footerp" href="https://www.google.fr/maps/place/SERVITHEN/@48.8155515,1.9083403,20z/data=!4m13!1m7!3m6!1s0x47e69b2e4c101591:0x3c4b6015d2f3a5ea!2s8+Rue+Guillaume+de+Bois+Nivard,+78640+Neauphle-le-Ch%C3%A2teau!3b1!8m2!3d48.8155576!4d1.9084528!3m4!1s0x47e69b2e4914fd6f:0xefa5b210e1554b90!8m2!3d48.8155084!4d1.9085263">
                         8 Rue Guillaume de Bois Nivard,<br> 78640 Neauphle-le-Château</a>
 
             </div>
-
-
-
-
-
 
         </footer>
 </body>
