Presentation modifiable (ajout general.json)

--- a/servithenFR/htmlFR/presentationFR.html
+++ b/servithenFR/htmlFR/presentationFR.html
@@ -93,18 +93,9 @@
                 <div class="barre"></div>
                 <div class="sphère"></div>
             </div>
-            <p id="P1" class="presentation">La société Servithen (Services Thermique Environnement) a été créée en 1986. Principalement centrée à l'origine sur l'audit et la mise en conformité d'installations thermiques existantes elle a étendu ses prestations à l'installation de lignes
-                complètes d'incinération et de traitement de fumées ou d'effluents gazeux et à la fourniture d'équipements spécifiques, ou d'installations "clé-en-main", avec en particulier :
-            </p>
-            <p id="P2" class="presentation"> · Des fours,<br><br> · Des laveurs de fumées pour l'abattement des poussières et la neutralisation des gaz acides,<br><br> · Des filtres électrostatiques humides permettant des rendements élevés de captation des poussières,<br><br> · Des unités
-                de traitement sec de fumées d'incinération,<br><br> · Des installations de traitement de composés organiques volatiles (COV), d'odeurs ou de traitement deNOx.
-            </p>
-            <p id="P3" class="presentation"> La Société SERVITHEN s’est vu décerner le label Gazelle 2005 par le ministre des PME, du commerce, de l’artisanat et des professions libérales, Monsieur Renaud DUTREIL. Ce trophée récompense 2.000 Entreprises françaises sur 1,2 millions de
-                PME. Les gazelles retenues sont les PME qui croissent pendant la période étudiée de 1993 à 2003, soit deux ou trois plus vite que celles du même secteur d’activité, soit celles qui sont dans le top 5 où 10 % de leur population en termes
-                de croissance et qui, ont une rentabilité supérieure à celle de leurs homologues. L’objectif de ce programme gouvernemental est de favoriser le maintien de la croissance rapide de ces PME les plus dynamiques. Notamment, en mobilisant toutes
-                les compétences pour leurs permettre de soutenir leur croissance, en particulier en enrichissant leur réseau relationnel, et en leur donnant accès à des offres spécifiques de partenaires, entre autres financiers</p>
-
-            <p class="texteGazelle">SERVITHEN Prix Gazelle 2005 :</p>
+            <p id="P1" class="presentation"></p>
+            <p id="P2" class="presentation"></p>
+            <p id="P3" class="presentation"><p class="texteGazelle">SERVITHEN Prix Gazelle 2005 :</p>
             <img class="prixGazelle" src="/img/20220310_152203741_iOS.jpeg">
         </div>
     </section>
