--- a/servithenFR/htmlFR/accueilFR.html
+++ b/servithenFR/htmlFR/accueilFR.html
@@ -102,21 +102,21 @@
             <div class="flex">
                 <div class="hover">
                     <div class="card2">
-                        <p id="description1" class="description">Diagnostic d'installation</p><img id="L1" class="left"> <img id="R1" class="right"> <img id="M1" class="middle"></div>
+                        <p id="description1" class="description"></p><img id="L1" class="left"> <img id="R1" class="right"> <img id="M1" class="middle"></div>
                 </div>
                 <div class="hover">
                     <div class="card2">
-                        <p id="description2" class="description">Remise aux normes</p><img id="L2" class="left"><img id="R2" class="right"> <img id="M2" class="middle"></div>
+                        <p id="description2" class="description"></p><img id="L2" class="left"><img id="R2" class="right"> <img id="M2" class="middle"></div>
                 </div>
             </div>
             <div class="flex">
                 <div class="hover">
                     <div class="card2">
-                        <p id="description3" class="description">Etude de projet</p><img id="L3" class="left"> <img id="R3" class="right"> <img id="M3" class="middle"></div>
+                        <p id="description3" class="description"></p><img id="L3" class="left"> <img id="R3" class="right"> <img id="M3" class="middle"></div>
                 </div>
                 <div class="hover">
                     <div class="card2">
-                        <p id="description4" class="description">Installation complète</p><img id="L4" class="left"> <img id="R4" class="right"> <img id="M4" class="middle"></div>
+                        <p id="description4" class="description"></p><img id="L4" class="left"> <img id="R4" class="right"> <img id="M4" class="middle"></div>
                 </div>
             </div>
         </div>
