--- a/servithenEN/htmlEN/appliEN.html
+++ b/servithenEN/htmlEN/appliEN.html
@@ -50,12 +50,11 @@
                 <button class="dropbtn">SERVICES 
               </button>
                 <div class="dropdown-content3">
-                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 1</a>
-                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 2</a>
-                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 3</a>
-                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 4</a>
-                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 5</a>
-                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 6</a>
+                    <a href="/servithenEN/htmlEN/serviceEN/service1EN.html">Installation Audits and Expertise</a>
+                    <a href="/servithenEN/htmlEN/serviceEN/service2EN.html">Upgrading to regulatory standards</a>
+                    <a href="/servithenEN/htmlEN/serviceEN/service3EN.html">Energy recovery</a>
+                    <a href="/servithenEN/htmlEN/serviceEN/service4EN.html">Feasibility studies, pre-projects and detailed studies</a>
+                    <a href="/servithenEN/htmlEN/serviceEN/service5EN.html">Preventive / curative maintenance</a>
                 </div>
             </div>
 
