--- a/servithenEN/htmlEN/serviceEN/service2EN.html
+++ b/servithenEN/htmlEN/serviceEN/service2EN.html
@@ -7,10 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Servithen</title>
     <link rel="shortcut icon" href="/img/logoSite/logo.png " type="/image/x-icon">
-    <link rel="stylesheet" href="/servithenFR/cssFR/accueilFR.css">
+    <link rel="stylesheet" href="/servithenEN/cssEN/accueilEN.css">
+    <link rel="stylesheet" href="/servithenEN/cssEN/serviceEN.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
-    <script type="text/javascript" src="/servithenFR/jsFR/confianceFR.js"></script>
+    <script type="text/javascript" src="/servithenEN/jsEN/confianceEN.js"></script>
 
 </head>
 
@@ -27,22 +28,23 @@
 
                 <a href="/servithenFR/htmlFR/accueilFR.html"><img class="logo" src="/img/logoSite/logo.png "></a>
 
-                <a href="/servithenFR/htmlFR/serviceFR/service3.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" /></a>
+                <a href="/servithenFR/htmlFR/serviceFR/service2.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" /></a>
 
-                <a href="/servithenEN/htmlEN/serviceEN/service3EN.html"><img class="langage" src="/img/drapeau/united-kingdom-flag-png-large.png" /></a>
+                <a href="/servithenEN/htmlEN/serviceEN/service2EN.html"><img class="langage" src="/img/drapeau/united-kingdom-flag-png-large.png" /></a>
+
 
 
                 <div class="dropdown">
 
-                    <a class="MenuBtn" href="/servithenFR/htmlFR/formFR.html">NOUS CONTACTER</a>
+                    <a class="MenuBtn" href="/servithenEN/htmlEN/formEN.html">CONTACT US</a>
 
                 </div>
 
                 <div class="dropdown">
-                    <button class="dropbtn">INDUSTRIE 4.0 
+                    <button class="dropbtn">INDUSTRY 4.0 
                   </button>
                     <div class="dropdown-content3">
-                        <a href="appli.html">MyPartner</a>
+                        <a href="appliEN.html">MyPartner</a>
                         <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 3</a>
                     </div>
                 </div>
@@ -51,34 +53,34 @@
                     <button class="dropbtn">SERVICES 
                   </button>
                     <div class="dropdown-content3">
-                        <a href="service1.html">Audits et Expertises d’installations</a>
-                        <a href="service2.html">Remise aux normes réglementaire </a>
-                        <a href="service3.html">Valorisation énergétique</a>
-                        <a href="service4.html">Etudes de faisabilité, Avant-projets et études de détail</a>
-                        <a href="service5.html">Maintenance préventive / curative</a>
+                        <a href="/servithenEN/htmlEN/serviceEN/service1EN.html">Installation Audits and Expertise</a>
+                        <a href="/servithenEN/htmlEN/serviceEN/service2EN.html">Upgrading to regulatory standards</a>
+                        <a href="/servithenEN/htmlEN/serviceEN/service3EN.html">Energy recovery</a>
+                        <a href="/servithenEN/htmlEN/serviceEN/service4EN.html">Feasibility studies, pre-projects and detailed studies</a>
+                        <a href="/servithenEN/htmlEN/serviceEN/service5EN.html">Preventive / curative maintenance</a>
                     </div>
                 </div>
 
                 <div class="dropdown">
-                    <button class="dropbtn">PRODUITS 
+                    <button class="dropbtn">PRODUCTS
                   </button>
                     <div class="dropdown-content3">
-                        <a href="/servithenFR/htmlFR//ProduitFR.html/ToursDeLavageFR.html">Tours de lavage</a>
-                        <a href="/servithenFR/htmlFR//ProduitFR.html/VenturiFR.html">Venturi</a>
-                        <a href="/servithenFR/htmlFR//ProduitFR.html/ElectrofiltresHumidesSecsFR.html">Electrofiltres humides / secs</a>
-                        <a href="/servithenFR/htmlFR//ProduitFR.html/FiltresManchesFR.html">Filtres à manches</a>
-                        <a href="/servithenFR/htmlFR//ProduitFR.html/EquipementsDosageInjectionDePoudresFR.html">EDIP : Equipements de Dosage et Injection de Poudres</a>
-                        <a href="/servithenFR/htmlFR//ProduitFR.html/InstallationsFR.html">Installations « Clés en mains »</a>
-                        <a href="/servithenFR/htmlFR//ProduitFR.html/RecuperationEnergiFR.html">Récupération d’énergie</a>
-                        <a href="/servithenFR/htmlFR//ProduitFR.html/FourniturePiecesRechangeFR.html">Fourniture de pièces de rechange</a>
+                        <a href="/servithenEN/htmlEN//ProduitEN.html/ToursDeLavageEN.html">washing towers</a>
+                        <a href="/servithenEN/htmlEN//ProduitEN.html/VenturiEN.html">Venturi</a>
+                        <a href="/servithenEN/htmlEN//ProduitEN.html/ElectrofiltresHumidesSecsEN.html">Wet/dry electrofilters</a>
+                        <a href="/servithenEN/htmlEN//ProduitEN.html/FiltresManchesEN.html">Bag filters</a>
+                        <a href="/servithenEN/htmlEN//ProduitEN.html/EquipementsDosageInjectionDePoudresEN.html">EDIP: Powder Dosing and Injection Equipment</a>
+                        <a href="/servithenEN/htmlEN//ProduitEN.html/InstallationsEN.html">“Turnkey” installations</a>
+                        <a href="/servithenEN/htmlEN//ProduitEN.html/RecuperationEnergiEN.html">Energy recovery</a>
+                        <a href="/servithenEN/htmlEN//ProduitEN.html/FourniturePiecesRechangeEN.html">Supply of spare parts</a>
                     </div>
                 </div>
 
                 <div class="dropdown">
-                    <button class="dropbtn">SAVOIR-FAIRE 
+                    <button class="dropbtn">EXPERTISE 
                   </button>
                     <div class="dropdown-content3">
-                        <a href="/servithenFR/htmlFR/presentationFR.html">Présentation</a>
+                        <a href="/servithenEN/htmlEN/presentationEN.html">Presentation</a>
                         <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 2</a>
                         <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 3</a>
                     </div>
@@ -86,9 +88,10 @@
 
                 <div class="dropdown">
 
-                    <a class="MenuBtn" href="/servithenFR/htmlFR/accueilFR.html">ACCUEIL</a>
+                    <a class="MenuBtn" href="/servithenEN/htmlEN/accueilEN.html">HOME</a>
 
                 </div>
+
 
             </div>
 
@@ -103,12 +106,12 @@
     <div id="infoAccueil">
         <div id="txtAccueil">
             <p class="pTitre">
-                Servithen, industrie française, <br> 30 ans de savoir faire. <br>
+                Servithen, French industry, <br> 30 years of expertise. <br>
             </p>
         </div>
         <div id="soustxtAccueil">
             <p class="pTitre">
-                Valorisation énergétique.
+                Upgrading to regulatory standards.
             </p>
         </div>
 
@@ -119,33 +122,33 @@
     <div class="page"></div>
     <section class="nav">
         <div class="fond">
-            <h3>Notre activité</h3>
+            <h3>Our activity</h3>
             <div class="déco">
                 <div class="sphère"></div>
                 <div class="transmission"></div>
                 <div class="barre"></div>
                 <div class="sphère"></div>
             </div>
-            <p class="textphoto">Basée en Ile-de-France et au Maroc, SERVITHEN est une société qui propose des services dans le domaine de lavage des gaz en tant que Maître d’œuvre (MOE) et Maître d’ouvrage (MO) pour examiner vos équipements de près et prolonger leurs durées
-                de vie tout en s’adaptant à vos besoins.</p>
+            <p class="textphoto">Based in Ile-de-France and Morocco, SERVITHEN is a company that offers services in the field of gas cleaning as Project Manager (MOE) and Project Owner (MO) to closely examine your equipment and extend their duration lifestyle while adapting
+                to your needs.</p>
             <div class="flex">
                 <div class="hover">
                     <div class="card2">
-                        <p class="description">Diagnostic d'installation</p><img src="/img/IMG_E7116.jpeg" class="left"> <img src="/img/IMG_7078.jpeg" class="right"> <img src="/img/IMG_7104 bis.jpeg" class="middle"></div>
+                        <p class="description">Installation diagnosis</p><img src="/img/IMG_E7116.jpeg" class="left"> <img src="/img/IMG_7078.jpeg" class="right"> <img src="/img/IMG_7104 bis.jpeg" class="middle"></div>
                 </div>
                 <div class="hover">
                     <div class="card2">
-                        <p class="description">Remise aux normes</p><img src="/img/20220310_152203741_iOS.jpeg" class="left"><img src="/img/20220310_152209869_iOS.jpeg" class="right"> <img src="/img/Norme.png" class="middle"></div>
+                        <p class="description">Upgrading</p><img src="/img/20220310_152203741_iOS.jpeg" class="left"><img src="/img/20220310_152209869_iOS.jpeg" class="right"> <img src="/img/Norme.png" class="middle"></div>
                 </div>
             </div>
             <div class="flex">
                 <div class="hover">
                     <div class="card2">
-                        <p class="description">Etude de projet</p><img src="/img/Gaine 2701 assemblage 2.png" class="left"> <img src="/img/Capture 2910 3.png" class="right"> <img src="/img/Capture 2701 3d.png" class="middle"></div>
+                        <p class="description">Project study</p><img src="/img/Gaine 2701 assemblage 2.png" class="left"> <img src="/img/Capture 2910 3.png" class="right"> <img src="/img/Capture 2701 3d.png" class="middle"></div>
                 </div>
                 <div class="hover">
                     <div class="card2">
-                        <p class="description">Installation complète</p><img src="/img//c0cc2127-d5d1-4551-a58b-f8810966ded9.jpeg" class="left"> <img src="/img/4173969b-65fc-4617-843d-711aa44b1d9e.jpeg" class="right"> <img src="/img/120e21a2-83cb-43ba-9fa4-f79532850dd7.jpeg"
+                        <p class="description">Complete installation</p><img src="/img//c0cc2127-d5d1-4551-a58b-f8810966ded9.jpeg" class="left"> <img src="/img/4173969b-65fc-4617-843d-711aa44b1d9e.jpeg" class="right"> <img src="/img/120e21a2-83cb-43ba-9fa4-f79532850dd7.jpeg"
                             class="middle"></div>
                 </div>
             </div>
@@ -157,7 +160,7 @@
     <div id="caroussel">
 
         <div class="container2">
-            <h3 class="text-center2 font-weight-bold2">Nos partenaires :</h3>
+            <h3 class="text-center2 font-weight-bold2">Our partners :</h3>
             <div class="déco">
                 <div class="sphère"></div>
                 <div class="transmission"></div>
@@ -175,7 +178,7 @@
 
 
         <div class="container">
-            <h2 class="text-center font-weight-bold">nous font confiance :</h2>
+            <h2 class="text-center font-weight-bold">trust us :</h2>
             <section class="customer-logos slider">
                 <div class="slide"><img src="/img/LogoConfiance/artelia.png"></div>
                 <div class="slide"><img src="/img/LogoConfiance/guerbet.png"></div>
@@ -196,7 +199,7 @@
         <footer class="coordonne">
 
             <div class="foters">
-                <h4>Coordonnées :</h4>
+                <h4>Contact information :</h4>
             </div>
 
             <div class="foter">
