--- a/servithenFR/htmlFR/ProduitFR.html/VenturiFR.html
+++ b/servithenFR/htmlFR/ProduitFR.html/VenturiFR.html
@@ -51,11 +51,11 @@
                     <button class="dropbtn">SERVICES 
                   </button>
                     <div class="dropdown-content3">
-                        <a href="serviceFR/service1.html">Audits et Expertises d’installations</a>
-                        <a href="serviceFR/service2.html">Remise aux normes réglementaire </a>
-                        <a href="serviceFR/service3.html">Valorisation énergétique</a>
-                        <a href="serviceFR/service4.html">Etudes de faisabilité, Avant-projets et études de détail</a>
-                        <a href="serviceFR/service5.html">Maintenance préventive / curative</a>
+                        <a href="/servithenFR/htmlFR/serviceFR/service1.html">Audits et Expertises d’installations</a>
+                        <a href="/servithenFR/htmlFR/serviceFR/service2.html">Remise aux normes réglementaire </a>
+                        <a href="/servithenFR/htmlFR/serviceFR/service3.html">Valorisation énergétique</a>
+                        <a href="/servithenFR/htmlFR/serviceFR/service4.html">Etudes de faisabilité, Avant-projets et études de détail</a>
+                        <a href="/servithenFR/htmlFR/serviceFR/service5.html">Maintenance préventive / curative</a>
                     </div>
                 </div>
 
