--- a/servithenEN/htmlEN/MentionsLegalesEN.html
+++ b/servithenEN/htmlEN/MentionsLegalesEN.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Servithen</title>
     <link rel="shortcut icon" href="/img/logoSite/logo.png " type="/image/x-icon">
-    <link rel="stylesheet" href="/servithenEN/cssEN/accueilEN.css">
+    <link rel="stylesheet" href="/servithenFR/cssFR/accueilFR.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
-    <script type="text/javascript" src="/servithenEN/jsEN/confianceEN.js"></script>
+    <script type="text/javascript" src="/servithenFR/jsFR/confianceFR.js"></script>
 
 </head>
 
@@ -25,24 +25,26 @@
             <div class="navbar">
 
 
-                <a href="/servithenEN/htmlEN/accueilEN.html"><img class="logo" src="/img/logoSite/logo.png "></a>
+                <a href="/servithenFR/htmlFR/accueilFR.html"><img class="logo" src="/img/logoSite/logo.png "></a>
 
-                <a href="/servithenFR/htmlFR//ProduitFR.html/VenturiFR.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" /></a>
+                <a href="/servithenFR/htmlFR/MentionsLegales.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" /></a>
 
-                <a href="/servithenEN/htmlEN//ProduitEN.html/VenturiEN.html"><img class="langage" src="/img/drapeau/united-kingdom-flag-png-large.png" /></a>
+                <a href="/servithenEN/htmlEN/MentionsLegalesEN.html"><img class="langage" src="/img/drapeau/united-kingdom-flag-png-large.png" /></a>
+
 
 
                 <div class="dropdown">
 
-                    <a class="MenuBtn" href="/servithenEN/htmlEN/formEN.html">CONTACT US</a>
+                    <a class="MenuBtn" href="/servithenFR/htmlFR/formFR.html">NOUS CONTACTER</a>
 
                 </div>
 
+
                 <div class="dropdown">
-                    <button class="dropbtn">INDUSTRY 4.0
+                    <button class="dropbtn">INDUSTRIE 4.0 
                   </button>
                     <div class="dropdown-content3">
-                        <a href="/servithenEN/htmlEN/appli.html">MyPartner</a>
+                        <a href="appli.html">MyPartner</a>
                         <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 3</a>
                     </div>
                 </div>
@@ -51,34 +53,34 @@
                     <button class="dropbtn">SERVICES 
                   </button>
                     <div class="dropdown-content3">
-                        <a href="/servithenEN/htmlEN/serviceEN/service1EN.html">Installation Audits and Expertise</a>
-                        <a href="/servithenEN/htmlEN/serviceEN/service2EN.html">Upgrading to regulatory standards</a>
-                        <a href="/servithenEN/htmlEN/serviceEN/service3EN.html">Energy recovery</a>
-                        <a href="/servithenEN/htmlEN/serviceEN/service4EN.html">Feasibility studies, pre-projects and detailed studies</a>
-                        <a href="/servithenEN/htmlEN/serviceEN/service5EN.html">Preventive / curative maintenance</a>
+                        <a href="serviceFR/service1.html">Audits et Expertises d’installations</a>
+                        <a href="serviceFR/service2.html">Remise aux normes réglementaire </a>
+                        <a href="serviceFR/service3.html">Valorisation énergétique</a>
+                        <a href="serviceFR/service4.html">Etudes de faisabilité, Avant-projets et études de détail</a>
+                        <a href="serviceFR/service5.html">Maintenance préventive / curative</a>
                     </div>
                 </div>
 
                 <div class="dropdown">
-                    <button class="dropbtn">PRODUCTS
+                    <button class="dropbtn">PRODUITS 
                   </button>
                     <div class="dropdown-content3">
-                        <a href="/servithenEN/htmlEN//ProduitEN.html/ToursDeLavageEN.html">washing towers</a>
-                        <a href="/servithenEN/htmlEN//ProduitEN.html/VenturiEN.html">Venturi</a>
-                        <a href="/servithenEN/htmlEN//ProduitEN.html/ElectrofiltresHumidesSecsEN.html">Wet/dry electrofilters</a>
-                        <a href="/servithenEN/htmlEN//ProduitEN.html/FiltresManchesEN.html">Bag filters</a>
-                        <a href="/servithenEN/htmlEN//ProduitEN.html/EquipementsDosageInjectionDePoudresEN.html">EDIP: Powder Dosing and Injection Equipment</a>
-                        <a href="/servithenEN/htmlEN//ProduitEN.html/InstallationsEN.html">“Turnkey” installations</a>
-                        <a href="/servithenEN/htmlEN//ProduitEN.html/RecuperationEnergiEN.html">Energy recovery</a>
-                        <a href="/servithenEN/htmlEN//ProduitEN.html/FourniturePiecesRechangeEN.html">Supply of spare parts</a>
+                        <a href="/servithenFR/htmlFR//ProduitFR.html/ToursDeLavageFR.html">Tours de lavage</a>
+                        <a href="/servithenFR/htmlFR//ProduitFR.html/VenturiFR.html">Venturi</a>
+                        <a href="/servithenFR/htmlFR//ProduitFR.html/ElectrofiltresHumidesSecsFR.html">Electrofiltres humides / secs</a>
+                        <a href="/servithenFR/htmlFR//ProduitFR.html/FiltresManchesFR.html">Filtres à manches</a>
+                        <a href="/servithenFR/htmlFR//ProduitFR.html/EquipementsDosageInjectionDePoudresFR.html">EDIP : Equipements de Dosage et Injection de Poudres</a>
+                        <a href="/servithenFR/htmlFR//ProduitFR.html/InstallationsFR.html">Installations « Clés en mains »</a>
+                        <a href="/servithenFR/htmlFR//ProduitFR.html/RecuperationEnergiFR.html">Récupération d’énergie</a>
+                        <a href="/servithenFR/htmlFR//ProduitFR.html/FourniturePiecesRechangeFR.html">Fourniture de pièces de rechange</a>
                     </div>
                 </div>
 
                 <div class="dropdown">
-                    <button class="dropbtn">EXPERTISE 
+                    <button class="dropbtn">SAVOIR-FAIRE 
                   </button>
                     <div class="dropdown-content3">
-                        <a href="/servithenEN/htmlEN/presentationEN.html">Presentation</a>
+                        <a href="/servithenFR/htmlFR/presentationFR.html">Présentation</a>
                         <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 2</a>
                         <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 3</a>
                     </div>
@@ -86,7 +88,7 @@
 
                 <div class="dropdown">
 
-                    <a class="MenuBtn" href="/servithenEN/htmlEN/accueilEN.html">HOME</a>
+                    <a class="MenuBtn" href="/servithenFR/htmlFR/accueilFR.html">ACCUEIL</a>
 
                 </div>
 
@@ -103,12 +105,12 @@
     <div id="infoAccueil">
         <div id="txtAccueil">
             <p class="pTitre">
-                Servithen, French industry, <br> 30 years of expertise. <br>
+                Servithen, industrie française, <br> 30 ans de savoir faire. <br>
             </p>
         </div>
         <div id="soustxtAccueil">
             <p class="pTitre">
-                Engineering, audit and project management assistance.
+                Ingénierie, audit et assistance à la maitrise d'ouvrage.
             </p>
         </div>
 
@@ -117,35 +119,14 @@
     <!-- section notre activité avec les image et les texte-->
 
     <div class="page"></div>
-    <section class="nav">
-        <div class="fondBroch">
-            <h3>Venturi</h3>
-            <div class="déco">
-                <div class="sphère"></div>
-                <div class="transmission"></div>
-                <div class="barre"></div>
-                <div class="sphère"></div>
-            </div>
-            <div>
 
-            </div>
-            <div class="carrerimg">
-                <img class="imgBrochur" src="/img/20220310_152203741_iOS.jpeg">
-                <p class="texteBroch">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti temporibus tempora consequatur autem, quas molestiae adipisci nulla exercitationem ex eos voluptate itaque labore delectus non? Fugit saepe ex dolore? Ducimus.</p>
-                <button class="btnPDF">
-                    <a class="DL" target="_blank" href="/img/brochure/FicheLAVEURSDEFUMÉES.pdf">Afficher la brochure</a>
-                </button>
-            </div>
-
-        </div>
-    </section>
 
     <!-- Les partenaires et nous font confiance -->
 
     <div id="caroussel">
 
         <div class="container2">
-            <h3 class="text-center2 font-weight-bold2">Our partners :</h3>
+            <h3 class="text-center2 font-weight-bold2">Nos partenaires :</h3>
             <div class="déco">
                 <div class="sphère"></div>
                 <div class="transmission"></div>
@@ -163,7 +144,7 @@
 
 
         <div class="container">
-            <h2 class="text-center font-weight-bold">trust us:</h2>
+            <h2 class="text-center font-weight-bold">nous font confiance :</h2>
             <section class="customer-logos slider">
                 <div class="slide"><img src="/img/LogoConfiance/artelia.png"></div>
                 <div class="slide"><img src="/img/LogoConfiance/guerbet.png"></div>
@@ -184,7 +165,7 @@
         <footer class="coordonne">
 
             <div class="foters">
-                <h4>Coordinated :</h4>
+                <h4>Coordonnées :</h4>
             </div>
 
             <div class="foter">
@@ -205,13 +186,10 @@
             <div class="foter">
                 <img class="logoinfo" src="/img/LogoFooter/logoPosW.png">
                 <a target="_blank" class="footerp" href="https://www.google.fr/maps/place/SERVITHEN/@48.8155515,1.9083403,20z/data=!4m13!1m7!3m6!1s0x47e69b2e4c101591:0x3c4b6015d2f3a5ea!2s8+Rue+Guillaume+de+Bois+Nivard,+78640+Neauphle-le-Ch%C3%A2teau!3b1!8m2!3d48.8155576!4d1.9084528!3m4!1s0x47e69b2e4914fd6f:0xefa5b210e1554b90!8m2!3d48.8155084!4d1.9085263">
-                            8 Rue Guillaume de Bois Nivard,<br> 78640 Neauphle-le-Château</a>
+                        8 Rue Guillaume de Bois Nivard,<br> 78640 Neauphle-le-Château</a>
 
             </div>
-
-
             <p class="Copyright">&copy; Copyright 1986 - 2022 | SERVITHEN | All rights reserved | <a class="Copyright" href="/servithenEN/htmlEN/MentionsLegalesEN.html">Legal Notice</a> </p>
-
 
         </footer>
 </body>
