--- a/servithenEN/htmlEN/appliEN.html
+++ b/servithenEN/htmlEN/appliEN.html
@@ -200,8 +200,7 @@
 
 
 
-
-
+        <p class="Copyright">&copy; Copyright 1986 - 2022 | SERVITHEN | All rights reserved | <a class="Copyright" href="/servithenEN/htmlEN/MentionsLegalesEN.html">Legal Notice</a> </p>
 
     </footer>
 
