--- a/servithenEN/htmlEN/presentationEN.html
+++ b/servithenEN/htmlEN/presentationEN.html
@@ -208,8 +208,7 @@
             </div>
 
 
-
-
+            <p class="Copyright">&copy; Copyright 1986 - 2022 | SERVITHEN | All rights reserved | <a class="Copyright" href="/servithenEN/htmlEN/MentionsLegalesEN.html">Legal Notice</a> </p>
 
 
         </footer>
