--- a/servithenEN/htmlEN/serviceEN/service4EN.html
+++ b/servithenEN/htmlEN/serviceEN/service4EN.html
@@ -224,6 +224,8 @@
 
             </div>
 
+            <p class="Copyright">&copy; Copyright 1986 - 2022 | SERVITHEN | All rights reserved | <a class="Copyright" href="/servithenEN/htmlEN/MentionsLegalesEN.html">Legal Notice</a> </p>
+
         </footer>
 </body>
 
