--- a/servithenFR/htmlFR/ProduitFR.html/ElectrofiltresHumidesSecsFR.html
+++ b/servithenFR/htmlFR/ProduitFR.html/ElectrofiltresHumidesSecsFR.html
@@ -212,6 +212,8 @@
 
             </div>
 
+            <p class="Copyright">&copy; Copyright 1986 - 2022 | SERVITHEN | Tous droits réservés | <a class="Copyright" href="/servithenFR/htmlFR/MentionsLegales.html">Mentions légales</a> </p>
+
         </footer>
 </body>
 
