--- a/servithenFR/htmlFR/ProduitFR.html/ToursDeLavageFR.html
+++ b/servithenFR/htmlFR/ProduitFR.html/ToursDeLavageFR.html
@@ -218,6 +218,8 @@
 
             </div>
 
+            <p class="Copyright">&copy; Copyright 1986 - 2022 | SERVITHEN | Tous droits réservés | <a class="Copyright" href="/servithenFR/htmlFR/MentionsLegales.html">Mentions légales</a> </p>
+
         </footer>
 </body>
 
