mention legal EN

--- a/servithenFR/htmlFR/MentionsLegales.html
+++ b/servithenFR/htmlFR/MentionsLegales.html
@@ -124,9 +124,10 @@
 
     <div>
         <div>
-            <h3 class="titleM">Bonjour</h3>
+            <h4>Titre</h4>
             <p class="mention">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, quas accusamus eum quia placeat suscipit voluptates fugiat assumenda laborum laudantium veniam ab. Possimus voluptatem maiores dolorum libero aut tenetur assumenda?</p>
             <p class="mention">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, quas accusamus eum quia placeat suscipit voluptates fugiat assumenda laborum laudantium veniam ab. Possimus voluptatem maiores dolorum libero aut tenetur assumenda?</p>
+            <h4>Titre</h4>
             <p class="mention">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, quas accusamus eum quia placeat suscipit voluptates fugiat assumenda laborum laudantium veniam ab. Possimus voluptatem maiores dolorum libero aut tenetur assumenda?</p>
         </div>
     </div>
