--- a/servithenEN/htmlEN/MentionsLegalesEN.html
+++ b/servithenEN/htmlEN/MentionsLegalesEN.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Servithen</title>
     <link rel="shortcut icon" href="/img/logoSite/logo.png " type="/image/x-icon">
-    <link rel="stylesheet" href="/servithenFR/cssFR/accueilFR.css">
+    <link rel="stylesheet" href="/servithenEN/cssEN/accueilEN.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
-    <script type="text/javascript" src="/servithenFR/jsFR/confianceFR.js"></script>
+    <script type="text/javascript" src="/servithenEN/jsEN/confianceEN.js"></script>
 
 </head>
 
@@ -25,7 +25,7 @@
             <div class="navbar">
 
 
-                <a href="/servithenFR/htmlFR/accueilFR.html"><img class="logo" src="/img/logoSite/logo.png "></a>
+                <a href="/servithenEN/htmlEN/accueilEN.html"><img class="logo" src="/img/logoSite/logo.png "></a>
 
                 <a href="/servithenFR/htmlFR/MentionsLegales.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" /></a>
 
@@ -35,16 +35,16 @@
 
                 <div class="dropdown">
 
-                    <a class="MenuBtn" href="/servithenFR/htmlFR/formFR.html">NOUS CONTACTER</a>
+                    <a class="MenuBtn" href="/servithenEN/htmlEN/formEN.html">CONTACT US</a>
 
                 </div>
 
 
                 <div class="dropdown">
-                    <button class="dropbtn">INDUSTRIE 4.0 
+                    <button class="dropbtn">INDUSTRY 4.0 
                   </button>
                     <div class="dropdown-content3">
-                        <a href="appli.html">MyPartner</a>
+                        <a href="appliEN.html">MyPartner</a>
                         <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 3</a>
                     </div>
                 </div>
@@ -53,34 +53,34 @@
                     <button class="dropbtn">SERVICES 
                   </button>
                     <div class="dropdown-content3">
-                        <a href="serviceFR/service1.html">Audits et Expertises d’installations</a>
-                        <a href="serviceFR/service2.html">Remise aux normes réglementaire </a>
-                        <a href="serviceFR/service3.html">Valorisation énergétique</a>
-                        <a href="serviceFR/service4.html">Etudes de faisabilité, Avant-projets et études de détail</a>
-                        <a href="serviceFR/service5.html">Maintenance préventive / curative</a>
+                        <a href="serviceEN/service1EN.html">Installation Audits and Expertise</a>
+                        <a href="serviceEN/service2EN.html">Upgrading to regulatory standards</a>
+                        <a href="serviceEN/service3EN.html">Energy recovery</a>
+                        <a href="serviceEN/service4EN.html">Feasibility studies, pre-projects and detailed studies</a>
+                        <a href="serviceEN/service5EN.html">Preventive / curative maintenance</a>
                     </div>
                 </div>
 
                 <div class="dropdown">
-                    <button class="dropbtn">PRODUITS 
+                    <button class="dropbtn">PRODUCTS 
                   </button>
                     <div class="dropdown-content3">
-                        <a href="/servithenFR/htmlFR//ProduitFR.html/ToursDeLavageFR.html">Tours de lavage</a>
-                        <a href="/servithenFR/htmlFR//ProduitFR.html/VenturiFR.html">Venturi</a>
-                        <a href="/servithenFR/htmlFR//ProduitFR.html/ElectrofiltresHumidesSecsFR.html">Electrofiltres humides / secs</a>
-                        <a href="/servithenFR/htmlFR//ProduitFR.html/FiltresManchesFR.html">Filtres à manches</a>
-                        <a href="/servithenFR/htmlFR//ProduitFR.html/EquipementsDosageInjectionDePoudresFR.html">EDIP : Equipements de Dosage et Injection de Poudres</a>
-                        <a href="/servithenFR/htmlFR//ProduitFR.html/InstallationsFR.html">Installations « Clés en mains »</a>
-                        <a href="/servithenFR/htmlFR//ProduitFR.html/RecuperationEnergiFR.html">Récupération d’énergie</a>
-                        <a href="/servithenFR/htmlFR//ProduitFR.html/FourniturePiecesRechangeFR.html">Fourniture de pièces de rechange</a>
+                        <a href="/servithenEN/htmlEN//ProduitEN.html/ToursDeLavageEN.html">washing towers</a>
+                        <a href="/servithenEN/htmlEN//ProduitEN.html/VenturiEN.html">Venturi</a>
+                        <a href="/servithenEN/htmlEN//ProduitEN.html/ElectrofiltresHumidesSecsEN.html">Wet / dry electrofilters</a>
+                        <a href="/servithenEN/htmlEN//ProduitEN.html/FiltresManchesEN.html">Bag filters</a>
+                        <a href="/servithenEN/htmlEN//ProduitEN.html/EquipementsDosageInjectionDePoudresEN.html">EDIP: Powder Dosing and Injection Equipment</a>
+                        <a href="/servithenEN/htmlEN//ProduitEN.html/InstallationsEN.html">“ Turnkey ” installations</a>
+                        <a href="/servithenEN/htmlEN//ProduitEN.html/RecuperationEnergiEN.html">Energy recovery</a>
+                        <a href="/servithenEN/htmlEN//ProduitEN.html/FourniturePiecesRechangeEN.html">Supply of spare parts</a>
                     </div>
                 </div>
 
                 <div class="dropdown">
-                    <button class="dropbtn">SAVOIR-FAIRE 
+                    <button class="dropbtn">EXPERTISE
                   </button>
                     <div class="dropdown-content3">
-                        <a href="/servithenFR/htmlFR/presentationFR.html">Présentation</a>
+                        <a href="/servithenEN/htmlEN/presentationEN.html">Presentation</a>
                         <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 2</a>
                         <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 3</a>
                     </div>
@@ -88,7 +88,7 @@
 
                 <div class="dropdown">
 
-                    <a class="MenuBtn" href="/servithenFR/htmlFR/accueilFR.html">ACCUEIL</a>
+                    <a class="MenuBtn" href="/servithenEN/htmlEN/accueilEN.html">HOME</a>
 
                 </div>
 
@@ -105,13 +105,11 @@
     <div id="infoAccueil">
         <div id="txtAccueil">
             <p class="pTitre">
-                Servithen, industrie française, <br> 30 ans de savoir faire. <br>
+                Legal Notice
             </p>
         </div>
         <div id="soustxtAccueil">
-            <p class="pTitre">
-                Ingénierie, audit et assistance à la maitrise d'ouvrage.
-            </p>
+
         </div>
 
     </div>
@@ -121,12 +119,23 @@
     <div class="page"></div>
 
 
+    <div>
+        <div>
+            <h4>Titre</h4>
+            <p class="mention">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, quas accusamus eum quia placeat suscipit voluptates fugiat assumenda laborum laudantium veniam ab. Possimus voluptatem maiores dolorum libero aut tenetur assumenda?</p>
+            <p class="mention">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, quas accusamus eum quia placeat suscipit voluptates fugiat assumenda laborum laudantium veniam ab. Possimus voluptatem maiores dolorum libero aut tenetur assumenda?</p>
+            <h4>Titre</h4>
+            <p class="mention">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, quas accusamus eum quia placeat suscipit voluptates fugiat assumenda laborum laudantium veniam ab. Possimus voluptatem maiores dolorum libero aut tenetur assumenda?</p>
+        </div>
+    </div>
+
+
     <!-- Les partenaires et nous font confiance -->
 
     <div id="caroussel">
 
         <div class="container2">
-            <h3 class="text-center2 font-weight-bold2">Nos partenaires :</h3>
+            <h3 class="text-center2 font-weight-bold2">Our partners :</h3>
             <div class="déco">
                 <div class="sphère"></div>
                 <div class="transmission"></div>
@@ -144,7 +153,7 @@
 
 
         <div class="container">
-            <h2 class="text-center font-weight-bold">nous font confiance :</h2>
+            <h2 class="text-center font-weight-bold">trust us :</h2>
             <section class="customer-logos slider">
                 <div class="slide"><img src="/img/LogoConfiance/artelia.png"></div>
                 <div class="slide"><img src="/img/LogoConfiance/guerbet.png"></div>
@@ -165,7 +174,7 @@
         <footer class="coordonne">
 
             <div class="foters">
-                <h4>Coordonnées :</h4>
+                <h4>Contact information :</h4>
             </div>
 
             <div class="foter">
